@@ -1,22 +1,22 @@
-10b1d949150f504b3221ee3dee90f253 *ChangeLog
-fee96b390802b703f38f6f2b8c4975f0 *DESCRIPTION
+48eb8761525f2c8d03106a5a24fa1bf4 *ChangeLog
+4d118e891023160032c7728897fbe400 *DESCRIPTION
 2c8b48af4dd31c66d2f44aacffb87212 *NAMESPACE
 6f33de887e28148af8587450070830e5 *R/AIC.dglars.R
 2228b8cceb54976f0e7cd7944e144292 *R/BIC.dglars.R
 64db8c88a5bca6a4be5574c65925c504 *R/coef.cvdglars.R
 91b58eefaec8b49d8ff7a9bbc048fa07 *R/coef.dglars.R
 7874fba5f6c00790a82fb99bc8d1c052 *R/cvdglars.R
-d106f42b52584653139a529e86a9f7ce *R/cvdglars.fit.R
+e5b9eeb6626109eb1994fd3ab936db59 *R/cvdglars.fit.R
 8d5105cd34a4a2dca299e8ce0bed4428 *R/cvdglars_ccd.R
 ec1f0a773add43f65b895c94b4278ea8 *R/cvdglars_pc.R
 b32d081e2d8608bab4b9422f34ef5a3a *R/d2mu_de2_mk.R
 4315ea5f45c433231b85cfa08d362487 *R/d2th_dmu2_mk.R
 524a54f8abb0258681ed3a5dca1d5c0d *R/dglars.R
-4e5cfa5fb9c8655d53df0606a3c4a615 *R/dglars.fit.R
+75dd5b4c143f15752a2644bc7fc714a9 *R/dglars.fit.R
 880859ca043e12ade47381048ebaf3c0 *R/dglars_ccd.R
 a98d3b1ea96511a4368cada2b4bd2246 *R/dglars_pc.R
 67b103edc7556454051fbb862614d83b *R/gdf.R
-09668528f8dcc2535afd30c246afbe1d *R/grcv.R
+65ac504a82abb55ffda9353a6d6df483 *R/grcv.R
 ac9cc8d5cd6aef966d0305dfa03ea3c0 *R/logLik.dglars.R
 0b5acdfcc61a1e3cfa9ed5131821e53f *R/make_action.R
 fc22768a086131c2c86b81e8a4b5818a *R/make_coef.R
@@ -33,7 +33,7 @@ f5b0da9c97b31d6408f4c8f822c6156b *R/print.cvdglars.R
 213e0f679aa65ee3fabed0c328f6b39e *R/print.gof_dglars.R
 00befb7457f7d7b08edfac2ed091f3f2 *R/print.loglik_dglars.R
 21898ea9bd50b5d38cfaf177dd5e535f *R/setDiff.R
-de5447652e18d7690c3061fdf47f7610 *R/summary.dglars.R
+c8abffd621086943a728d81bf57e7019 *R/summary.dglars.R
 d6d260efacfb5804f8424f4f6dc5c011 *data/alon.RData
 f5941e4d6e3985ad8657abfb91326447 *data/breast.RData
 24b37b86587b18e5742cdf4c8cc7c9e0 *data/datalist
@@ -46,7 +46,7 @@ cbaca7951b5f190703e36038627f7743 *man/AIC.dglars.Rd
 85d3dcefdc45763ae9ae08639a857147 *man/coef.dglars.Rd
 d1b9a3da93e2abca4caaf2766f4c9986 *man/cvdglars.Rd
 f4b6368a63259214f352a920b395e563 *man/dglars-internal.Rd
-d24b1929e69efa1972ade0319d8ec8c8 *man/dglars-package.Rd
+055c30efad3e55765b4e1d14fe1308e3 *man/dglars-package.Rd
 2cfef32228cd4968e2033fd6fff4f246 *man/dglars.Rd
 50a780b6879f73ec88258a113bc797f9 *man/duke.Rd
 645787e91b5c20bff4af646181d5e65b *man/gdf.Rd
